[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "myghsandbox-DanieleRapetti"
dynamic = ["version"]
description = "A package for playing with github features"
readme = { "file" = "Readme.md", "content-type" = "text/markdown" }
license = "MIT"
requires-python = ">=3.8"
authors = [{ name = "Daniele Rapetti", email = "daniele.rapetti@polito.it" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

dependencies = []


[project.urls]
"Bug Tracker" = "https://github.com/Iximiel/myGH-Sandbox/issues"
Homepage = "https://github.com/Iximiel/myGH-Sandbox"
"Source code" = "https://github.com/Iximiel/myGH-Sandbox"

[tool.hatch.version]
path = "src/myghsandbox/__init__.py"


[tool.hatch.build]
sources = ["src"]
only-packages = true

[tool.hatch.envs.test]
pre-install-commands = ["which python"]

extra-dependencies = ["coverage[toml]", "pytest", "pytest-cov"]

[tool.hatch.envs.test.scripts]
cov = 'pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=src --cov-report html'
tools = 'pytest ./tests/test_tools.py'

[[tool.hatch.envs.test.matrix]]
python = ["3.8", "3.9"]


[tool.hatch.envs.docs]
extra-dependencies = [
    "sphinx",
    "docutils<0.18",
    "sphinx-rtd-theme",
    "myst-parser",
    "sphinx-autodoc-typehints",
]

[tool.hatch.envs.docs.scripts]
cov = 'cd docs && make coverage'
build = 'cd docs && make html'
